--- a/script.ipynb
+++ b/script.ipynb
@@ -70,9 +70,432 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "918f08e8",
+   "metadata": {},
+   "source": [
+    "# Combine all intersections"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "167fd113",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "remaining_intersections_path = \"C:\\\\MyApps\\\\TMCGis\\\\backend\\\\resources\\\\remaining_intersections.csv\"\n",
+    "intersections_path = \"C:\\\\MyApps\\\\TMCGis\\\\backend\\\\resources\\\\intersections.csv\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "e4446112",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "# read CSVs; fall back to latin1 if UTF-8 decoding fails\n",
+    "try:\n",
+    "    remaining_intersections = pd.read_csv(remaining_intersections_path)\n",
+    "except UnicodeDecodeError:\n",
+    "    remaining_intersections = pd.read_csv(remaining_intersections_path, encoding=\"latin1\")\n",
+    "\n",
+    "try:\n",
+    "    intersections = pd.read_csv(intersections_path)\n",
+    "except UnicodeDecodeError:\n",
+    "    intersections = pd.read_csv(intersections_path, encoding=\"latin1\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "f3d28e78",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "intersections[\"Signal ID\"] = intersections[\"Name\"].str.split(\" \").str[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "f9253b7c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "matching intersections: 100%|██████████| 8942/8942 [00:00<00:00, 47207.74it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from tqdm import tqdm\n",
+    "\n",
+    "# ensure output columns exist\n",
+    "if \"Longitude\" not in remaining_intersections.columns:\n",
+    "    remaining_intersections[\"Longitude\"] = pd.NA\n",
+    "if \"Latitude\" not in remaining_intersections.columns:\n",
+    "    remaining_intersections[\"Latitude\"] = pd.NA\n",
+    "\n",
+    "# helper to normalize signal id to comparable string\n",
+    "def _sid_str(x):\n",
+    "    if pd.isna(x):\n",
+    "        return None\n",
+    "    # convert floats like 8000100.0 -> \"8000100\", otherwise keep string form\n",
+    "    if isinstance(x, float) and x.is_integer():\n",
+    "        return str(int(x))\n",
+    "    return str(x).strip()\n",
+    "\n",
+    "remaining_intersections[\"_sid_str\"] = remaining_intersections[\"Signal ID\"].apply(_sid_str)\n",
+    "intersections[\"_sid_str\"] = intersections[\"Signal ID\"].apply(_sid_str)\n",
+    "\n",
+    "# build mapping from signal id -> (long, lat)\n",
+    "# build mapping from signal id -> (long, lat)\n",
+    "# handle non-unique _sid_str by taking the first occurrence for each id\n",
+    "coord_map = (\n",
+    "    intersections\n",
+    "    .dropna(subset=[\"_sid_str\"])\n",
+    "    .groupby(\"_sid_str\", sort=False)[[\"long\", \"lat\"]]\n",
+    "    .first()\n",
+    "    .to_dict(orient=\"index\")\n",
+    ")\n",
+    "# normalize keys to plain stripped strings (and filter out any None)\n",
+    "coord_map = {str(k).strip(): v for k, v in coord_map.items() if k is not None}\n",
+    "\n",
+    "# apply mapping with a progress bar (uses index variable 'i' to avoid clobbering notebook 'idx')\n",
+    "for i in tqdm(remaining_intersections.index, desc=\"matching intersections\", total=remaining_intersections.shape[0]):\n",
+    "    sid = remaining_intersections.at[i, \"_sid_str\"]\n",
+    "    if sid and sid in coord_map:\n",
+    "        remaining_intersections.at[i, \"Longitude\"] = coord_map[sid][\"long\"]\n",
+    "        remaining_intersections.at[i, \"Latitude\"] = coord_map[sid][\"lat\"]\n",
+    "\n",
+    "# cleanup helper columns\n",
+    "remaining_intersections.drop(columns=[\"_sid_str\"], inplace=True, errors=\"ignore\")\n",
+    "intersections.drop(columns=[\"_sid_str\"], inplace=True, errors=\"ignore\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "3d325ee9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Signal ID</th>\n",
+       "      <th>Corridor from signal list</th>\n",
+       "      <th>Intersection Name</th>\n",
+       "      <th>Group</th>\n",
+       "      <th>Device DNS</th>\n",
+       "      <th>Vendor</th>\n",
+       "      <th>IP Address</th>\n",
+       "      <th>Sub Mask</th>\n",
+       "      <th>Gateway</th>\n",
+       "      <th>Unnamed: 9</th>\n",
+       "      <th>Unnamed: 10</th>\n",
+       "      <th>IP not by 1</th>\n",
+       "      <th>Longitude</th>\n",
+       "      <th>Latitude</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>8000100.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>CSAH 8 (West Broadway) at CSAH 10 (Bass Lake R...</td>\n",
+       "      <td>NMED2</td>\n",
+       "      <td>atms-8-10-switch</td>\n",
+       "      <td>Cisco</td>\n",
+       "      <td>192.168.29.131</td>\n",
+       "      <td>255.255.255.224</td>\n",
+       "      <td>192.168.29.131</td>\n",
+       "      <td>131.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-93.365631</td>\n",
+       "      <td>45.054403</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>8000100.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>CSAH 8 (West Broadway) at CSAH 10 (Bass Lake R...</td>\n",
+       "      <td>NMED2</td>\n",
+       "      <td>atms-8-10-controller</td>\n",
+       "      <td>Econolite</td>\n",
+       "      <td>192.168.29.135</td>\n",
+       "      <td>255.255.255.224</td>\n",
+       "      <td>192.168.29.131</td>\n",
+       "      <td>135.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>IP not by 1</td>\n",
+       "      <td>-93.365631</td>\n",
+       "      <td>45.054403</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>8000100.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>CSAH 8 (West Broadway) at CSAH 10 (Bass Lake R...</td>\n",
+       "      <td>NMED2</td>\n",
+       "      <td>atms-8-10-mmu</td>\n",
+       "      <td>RAE</td>\n",
+       "      <td>192.168.29.136</td>\n",
+       "      <td>255.255.255.224</td>\n",
+       "      <td>192.168.29.131</td>\n",
+       "      <td>136.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-93.365631</td>\n",
+       "      <td>45.054403</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>8000100.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>CSAH 8 (West Broadway) at CSAH 10 (Bass Lake R...</td>\n",
+       "      <td>NMED2</td>\n",
+       "      <td>atms-8-10-evp</td>\n",
+       "      <td>Tomar/GTT</td>\n",
+       "      <td>192.168.29.137</td>\n",
+       "      <td>255.255.255.224</td>\n",
+       "      <td>192.168.29.131</td>\n",
+       "      <td>137.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-93.365631</td>\n",
+       "      <td>45.054403</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>8000100.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>CSAH 8 (West Broadway) at CSAH 10 (Bass Lake R...</td>\n",
+       "      <td>NMED2</td>\n",
+       "      <td>atms-8-10-aps</td>\n",
+       "      <td>Cambell/Polara</td>\n",
+       "      <td>192.168.29.138</td>\n",
+       "      <td>255.255.255.224</td>\n",
+       "      <td>192.168.29.131</td>\n",
+       "      <td>138.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-93.365631</td>\n",
+       "      <td>45.054403</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8937</th>\n",
+       "      <td>8000000.0</td>\n",
+       "      <td>tmc</td>\n",
+       "      <td>TMC Test Cabinet</td>\n",
+       "      <td>Medina</td>\n",
+       "      <td>atms-tmc-test-potential6</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>192.168.192.21</td>\n",
+       "      <td>225.255.255.224</td>\n",
+       "      <td>192.168.192.3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8938</th>\n",
+       "      <td>8000000.0</td>\n",
+       "      <td>tmc</td>\n",
+       "      <td>TMC Test Cabinet</td>\n",
+       "      <td>Medina</td>\n",
+       "      <td>atms-tmc-test-potential7</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>192.168.192.22</td>\n",
+       "      <td>225.255.255.224</td>\n",
+       "      <td>192.168.192.3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8939</th>\n",
+       "      <td>8000000.0</td>\n",
+       "      <td>tmc</td>\n",
+       "      <td>TMC Test Cabinet</td>\n",
+       "      <td>Medina</td>\n",
+       "      <td>atms-tmc-test-potential8</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>192.168.192.23</td>\n",
+       "      <td>225.255.255.224</td>\n",
+       "      <td>192.168.192.3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8940</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8941</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>8942 rows × 14 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Signal ID Corridor from signal list  \\\n",
+       "0     8000100.0                         8   \n",
+       "1     8000100.0                         8   \n",
+       "2     8000100.0                         8   \n",
+       "3     8000100.0                         8   \n",
+       "4     8000100.0                         8   \n",
+       "...         ...                       ...   \n",
+       "8937  8000000.0                       tmc   \n",
+       "8938  8000000.0                       tmc   \n",
+       "8939  8000000.0                       tmc   \n",
+       "8940        NaN                       NaN   \n",
+       "8941        NaN                       NaN   \n",
+       "\n",
+       "                                      Intersection Name   Group  \\\n",
+       "0     CSAH 8 (West Broadway) at CSAH 10 (Bass Lake R...   NMED2   \n",
+       "1     CSAH 8 (West Broadway) at CSAH 10 (Bass Lake R...   NMED2   \n",
+       "2     CSAH 8 (West Broadway) at CSAH 10 (Bass Lake R...   NMED2   \n",
+       "3     CSAH 8 (West Broadway) at CSAH 10 (Bass Lake R...   NMED2   \n",
+       "4     CSAH 8 (West Broadway) at CSAH 10 (Bass Lake R...   NMED2   \n",
+       "...                                                 ...     ...   \n",
+       "8937                                   TMC Test Cabinet  Medina   \n",
+       "8938                                   TMC Test Cabinet  Medina   \n",
+       "8939                                   TMC Test Cabinet  Medina   \n",
+       "8940                                                NaN     NaN   \n",
+       "8941                                                NaN     NaN   \n",
+       "\n",
+       "                    Device DNS          Vendor      IP Address  \\\n",
+       "0             atms-8-10-switch           Cisco  192.168.29.131   \n",
+       "1         atms-8-10-controller       Econolite  192.168.29.135   \n",
+       "2                atms-8-10-mmu             RAE  192.168.29.136   \n",
+       "3                atms-8-10-evp       Tomar/GTT  192.168.29.137   \n",
+       "4                atms-8-10-aps  Cambell/Polara  192.168.29.138   \n",
+       "...                        ...             ...             ...   \n",
+       "8937  atms-tmc-test-potential6             NaN  192.168.192.21   \n",
+       "8938  atms-tmc-test-potential7             NaN  192.168.192.22   \n",
+       "8939  atms-tmc-test-potential8             NaN  192.168.192.23   \n",
+       "8940                       NaN             NaN             NaN   \n",
+       "8941                       NaN             NaN             NaN   \n",
+       "\n",
+       "             Sub Mask         Gateway  Unnamed: 9  Unnamed: 10  IP not by 1  \\\n",
+       "0     255.255.255.224  192.168.29.131       131.0          NaN          NaN   \n",
+       "1     255.255.255.224  192.168.29.131       135.0          4.0  IP not by 1   \n",
+       "2     255.255.255.224  192.168.29.131       136.0          NaN          NaN   \n",
+       "3     255.255.255.224  192.168.29.131       137.0          NaN          NaN   \n",
+       "4     255.255.255.224  192.168.29.131       138.0          NaN          NaN   \n",
+       "...               ...             ...         ...          ...          ...   \n",
+       "8937  225.255.255.224   192.168.192.3         NaN          NaN          NaN   \n",
+       "8938  225.255.255.224   192.168.192.3         NaN          NaN          NaN   \n",
+       "8939  225.255.255.224   192.168.192.3         NaN          NaN          NaN   \n",
+       "8940              NaN             NaN         NaN          NaN          NaN   \n",
+       "8941              NaN             NaN         NaN          NaN          NaN   \n",
+       "\n",
+       "      Longitude   Latitude  \n",
+       "0    -93.365631  45.054403  \n",
+       "1    -93.365631  45.054403  \n",
+       "2    -93.365631  45.054403  \n",
+       "3    -93.365631  45.054403  \n",
+       "4    -93.365631  45.054403  \n",
+       "...         ...        ...  \n",
+       "8937       <NA>       <NA>  \n",
+       "8938       <NA>       <NA>  \n",
+       "8939       <NA>       <NA>  \n",
+       "8940       <NA>       <NA>  \n",
+       "8941       <NA>       <NA>  \n",
+       "\n",
+       "[8942 rows x 14 columns]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "remaining_intersections"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "167fd113",
+   "id": "a5beea32",
    "metadata": {},
    "outputs": [],
    "source": []
