--- a/script.ipynb
+++ b/script.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "167fd113",
    "metadata": {},
    "outputs": [],
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "e4446112",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "f3d28e78",
    "metadata": {},
    "outputs": [],
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "id": "f9253b7c",
    "metadata": {},
    "outputs": [
@@ -128,7 +128,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "matching intersections: 100%|██████████| 8942/8942 [00:00<00:00, 47207.74it/s]\n"
+      "matching intersections: 100%|██████████| 8942/8942 [00:00<00:00, 50252.92it/s]\n"
      ]
     }
    ],
@@ -175,13 +175,16 @@
     "\n",
     "# cleanup helper columns\n",
     "remaining_intersections.drop(columns=[\"_sid_str\"], inplace=True, errors=\"ignore\")\n",
-    "intersections.drop(columns=[\"_sid_str\"], inplace=True, errors=\"ignore\")"
+    "intersections.drop(columns=[\"_sid_str\"], inplace=True, errors=\"ignore\")\n",
+    "# Drop unnamed columns if they exist\n",
+    "remaining_intersections = remaining_intersections.loc[:, ~remaining_intersections.columns.str.contains('^Unnamed')]\n",
+    "intersections = intersections.loc[:, ~intersections.columns.str.contains('^Unnamed')]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "3d325ee9",
+   "execution_count": 9,
+   "id": "4623c040",
    "metadata": {},
    "outputs": [
     {
@@ -214,8 +217,6 @@
        "      <th>IP Address</th>\n",
        "      <th>Sub Mask</th>\n",
        "      <th>Gateway</th>\n",
-       "      <th>Unnamed: 9</th>\n",
-       "      <th>Unnamed: 10</th>\n",
        "      <th>IP not by 1</th>\n",
        "      <th>Longitude</th>\n",
        "      <th>Latitude</th>\n",
@@ -233,8 +234,6 @@
        "      <td>192.168.29.131</td>\n",
        "      <td>255.255.255.224</td>\n",
        "      <td>192.168.29.131</td>\n",
-       "      <td>131.0</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>-93.365631</td>\n",
        "      <td>45.054403</td>\n",
@@ -250,8 +249,6 @@
        "      <td>192.168.29.135</td>\n",
        "      <td>255.255.255.224</td>\n",
        "      <td>192.168.29.131</td>\n",
-       "      <td>135.0</td>\n",
-       "      <td>4.0</td>\n",
        "      <td>IP not by 1</td>\n",
        "      <td>-93.365631</td>\n",
        "      <td>45.054403</td>\n",
@@ -267,8 +264,6 @@
        "      <td>192.168.29.136</td>\n",
        "      <td>255.255.255.224</td>\n",
        "      <td>192.168.29.131</td>\n",
-       "      <td>136.0</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>-93.365631</td>\n",
        "      <td>45.054403</td>\n",
@@ -284,8 +279,6 @@
        "      <td>192.168.29.137</td>\n",
        "      <td>255.255.255.224</td>\n",
        "      <td>192.168.29.131</td>\n",
-       "      <td>137.0</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>-93.365631</td>\n",
        "      <td>45.054403</td>\n",
@@ -301,16 +294,12 @@
        "      <td>192.168.29.138</td>\n",
        "      <td>255.255.255.224</td>\n",
        "      <td>192.168.29.131</td>\n",
-       "      <td>138.0</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>-93.365631</td>\n",
        "      <td>45.054403</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -336,8 +325,6 @@
        "      <td>225.255.255.224</td>\n",
        "      <td>192.168.192.3</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>&lt;NA&gt;</td>\n",
        "      <td>&lt;NA&gt;</td>\n",
        "    </tr>\n",
@@ -352,8 +339,6 @@
        "      <td>192.168.192.22</td>\n",
        "      <td>225.255.255.224</td>\n",
        "      <td>192.168.192.3</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>&lt;NA&gt;</td>\n",
        "      <td>&lt;NA&gt;</td>\n",
@@ -370,15 +355,11 @@
        "      <td>225.255.255.224</td>\n",
        "      <td>192.168.192.3</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>&lt;NA&gt;</td>\n",
        "      <td>&lt;NA&gt;</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8940</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -404,14 +385,12 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>&lt;NA&gt;</td>\n",
        "      <td>&lt;NA&gt;</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>8942 rows × 14 columns</p>\n",
+       "<p>8942 rows × 12 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -454,42 +433,40 @@
        "8940                       NaN             NaN             NaN   \n",
        "8941                       NaN             NaN             NaN   \n",
        "\n",
-       "             Sub Mask         Gateway  Unnamed: 9  Unnamed: 10  IP not by 1  \\\n",
-       "0     255.255.255.224  192.168.29.131       131.0          NaN          NaN   \n",
-       "1     255.255.255.224  192.168.29.131       135.0          4.0  IP not by 1   \n",
-       "2     255.255.255.224  192.168.29.131       136.0          NaN          NaN   \n",
-       "3     255.255.255.224  192.168.29.131       137.0          NaN          NaN   \n",
-       "4     255.255.255.224  192.168.29.131       138.0          NaN          NaN   \n",
-       "...               ...             ...         ...          ...          ...   \n",
-       "8937  225.255.255.224   192.168.192.3         NaN          NaN          NaN   \n",
-       "8938  225.255.255.224   192.168.192.3         NaN          NaN          NaN   \n",
-       "8939  225.255.255.224   192.168.192.3         NaN          NaN          NaN   \n",
-       "8940              NaN             NaN         NaN          NaN          NaN   \n",
-       "8941              NaN             NaN         NaN          NaN          NaN   \n",
+       "             Sub Mask         Gateway  IP not by 1  Longitude   Latitude  \n",
+       "0     255.255.255.224  192.168.29.131          NaN -93.365631  45.054403  \n",
+       "1     255.255.255.224  192.168.29.131  IP not by 1 -93.365631  45.054403  \n",
+       "2     255.255.255.224  192.168.29.131          NaN -93.365631  45.054403  \n",
+       "3     255.255.255.224  192.168.29.131          NaN -93.365631  45.054403  \n",
+       "4     255.255.255.224  192.168.29.131          NaN -93.365631  45.054403  \n",
+       "...               ...             ...          ...        ...        ...  \n",
+       "8937  225.255.255.224   192.168.192.3          NaN       <NA>       <NA>  \n",
+       "8938  225.255.255.224   192.168.192.3          NaN       <NA>       <NA>  \n",
+       "8939  225.255.255.224   192.168.192.3          NaN       <NA>       <NA>  \n",
+       "8940              NaN             NaN          NaN       <NA>       <NA>  \n",
+       "8941              NaN             NaN          NaN       <NA>       <NA>  \n",
        "\n",
-       "      Longitude   Latitude  \n",
-       "0    -93.365631  45.054403  \n",
-       "1    -93.365631  45.054403  \n",
-       "2    -93.365631  45.054403  \n",
-       "3    -93.365631  45.054403  \n",
-       "4    -93.365631  45.054403  \n",
-       "...         ...        ...  \n",
-       "8937       <NA>       <NA>  \n",
-       "8938       <NA>       <NA>  \n",
-       "8939       <NA>       <NA>  \n",
-       "8940       <NA>       <NA>  \n",
-       "8941       <NA>       <NA>  \n",
-       "\n",
-       "[8942 rows x 14 columns]"
+       "[8942 rows x 12 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "remaining_intersections"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "3d325ee9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "remaining_intersections.to_csv(os.path.dirname(remaining_intersections_path) + \"\\\\compelete_intersections.csv\", index=False)"
    ]
   },
   {
