--- a/script.ipynb
+++ b/script.ipynb
@@ -471,8 +471,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "a5beea32",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Q: Are there water droplets on the lens?\n",
+      "A: ['']\n",
+      "\n",
+      "Q: Is the intersection clearly visible?\n",
+      "A: ['']\n",
+      "\n",
+      "Q: Is the view obstructed?\n",
+      "A: ['']\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "from PIL import Image\n",
+    "from lavis.models import load_model_and_preprocess\n",
+    "\n",
+    "# Load BLIP-2 model (ViT-G is large; use ViT-B for lower GPU usage)\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "model, vis_processors, _ = load_model_and_preprocess(\n",
+    "    name=\"blip2_opt\", model_type=\"pretrain_opt2.7b\", is_eval=True, device=device\n",
+    ")\n",
+    "\n",
+    "# Load and preprocess your image\n",
+    "image_path = \"snapshot.jpg\"  # Replace with your image path\n",
+    "raw_image = Image.open(image_path).convert(\"RGB\")\n",
+    "# use the 'eval' visual processor to preprocess the PIL image\n",
+    "image = vis_processors[\"eval\"](raw_image).unsqueeze(0).to(device)\n",
+    "\n",
+    "# Ask questions\n",
+    "questions = [\n",
+    "    \"Are there water droplets on the lens?\",\n",
+    "    \"Is the intersection clearly visible?\",\n",
+    "    \"Is the view obstructed?\",\n",
+    "]\n",
+    "\n",
+    "# Run inference\n",
+    "for question in questions:\n",
+    "    answer = model.generate({\"image\": image, \"prompt\": question})\n",
+    "    print(f\"Q: {question}\\nA: {answer}\\n\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "c5c6e497",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'Blip2Processor' from 'transformers' (c:\\MyApps\\TMCGis\\.venv\\Lib\\site-packages\\transformers\\__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mImportError\u001b[39m                               Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mrequests\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mPIL\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Image\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mtransformers\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Blip2Processor, Blip2ForConditionalGeneration\n\u001b[32m      5\u001b[39m processor = Blip2Processor.from_pretrained(\u001b[33m\"\u001b[39m\u001b[33mSalesforce/blip2-opt-2.7b\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m      6\u001b[39m model = Blip2ForConditionalGeneration.from_pretrained(\u001b[33m\"\u001b[39m\u001b[33mSalesforce/blip2-opt-2.7b\u001b[39m\u001b[33m\"\u001b[39m, device_map=\u001b[33m\"\u001b[39m\u001b[33mauto\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mImportError\u001b[39m: cannot import name 'Blip2Processor' from 'transformers' (c:\\MyApps\\TMCGis\\.venv\\Lib\\site-packages\\transformers\\__init__.py)"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "from PIL import Image\n",
+    "from transformers import Blip2Processor, Blip2ForConditionalGeneration\n",
+    "\n",
+    "processor = Blip2Processor.from_pretrained(\"Salesforce/blip2-opt-2.7b\")\n",
+    "model = Blip2ForConditionalGeneration.from_pretrained(\"Salesforce/blip2-opt-2.7b\", device_map=\"auto\")\n",
+    "\n",
+    "img_url = 'https://storage.googleapis.com/sfr-vision-language-research/BLIP/demo.jpg' \n",
+    "raw_image = Image.open(requests.get(img_url, stream=True).raw).convert('RGB')\n",
+    "\n",
+    "question = \"how many dogs are in the picture?\"\n",
+    "inputs = processor(raw_image, question, return_tensors=\"pt\").to(\"cuda\")\n",
+    "\n",
+    "out = model.generate(**inputs)\n",
+    "print(processor.decode(out[0], skip_special_tokens=True).strip())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5f8493f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -480,7 +568,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv (3.11.5)",
    "language": "python",
    "name": "python3"
   },
